# to-static-string

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
bench/: bench.cpp
include/: to_static_string.h
include/tostr/: to_static_string.h
test/: test.cpp
